--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-pxtorem": "^5.1.1",
+    "sass": "^1.26.6",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
